feat: more detailed info

--- a/html/index.html
+++ b/html/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Podcast X</title>
-    <meta name="description" content="Convert your favorate article to podcast">
+    <meta name="description" content="使用最新文本转语音技术为您喜欢的新闻、博客生成逼真的语音朗读。">
     <meta name="keywords" content="podcast, article, text, speech, text-to-speech">
     <meta name="author" content="qiwihui">
     <meta property="og:title" content="Podcast X">
-    <meta property="og:description" content="Convert your favorate article to podcast">
+    <meta property="og:description" content="使用最新文本转语音技术为您喜欢的新闻、博客生成逼真的语音朗读。">
   </head>
   <body>
     <div id="app"></div>
